# ana

./: .gitignore  README.md  clean.sh  sample_business_data.csv
backend/: .gitignore  CLAUDE.md  README.md  check_data.py  check_data_all.py  check_data_any.py  check_prefetch.py  check_rent.py  check_years.py  config.py  generate_advanced_data.py  generate_hr_data.py  generate_mock_data.py  logging_config.py  main.py  pyproject.toml  query_db.py  repro_qdrant.py  simulate_prompt.py  simulate_query.py  sync_metadata.py  sync_teenoi_mega.py  temp.typ  test_grok_code.py
backend/api/: deps.py  router.py
backend/api/endpoints/: chat.py  export.py  files.py  models.py  typst.py
backend/models/: request_models.py  response_models.py
backend/modules/analytics/: financial_calculator.py
backend/modules/data/: base_provider.py  csv_provider.py  duckdb_provider.py  orchestrator.py
backend/modules/ingestion/: async_processor.py  excel_parser.py
backend/modules/llm/: analyst_agent.py  code_interpreter.py  factory.py  output_parser.py  prompts.py  prompts.yaml  prompts_legacy.py  stream_handler.py  typst_template.py
backend/modules/llm/memory/: database.py
backend/modules/rag/: chunker.py  embedder.py  ranker.py  retriever.py  vector_store.py
backend/modules/storage/: df_cache.py  file_manager.py  metadata_manager.py
backend/modules/typst_gen/: generator.py  pdf_parser.py  prompts.yaml
backend/scripts/: generate_apartment_data.py  generate_mega_teenoi.py  generate_v2_data.py  migrate_storage.py
backend/tests/: conftest.py
backend/tests/e2e/: test_advanced_rag.py  test_financial_accuracy.py
backend/tests/integration/: test_data_agent_flow.py  test_query_flow.py
backend/tests/unit/: test_analyst_agent.py  test_chunker.py  test_code_interpreter.py  test_csv_provider.py  test_df_cache.py  test_duckdb_provider.py  test_embedder.py  test_excel_parser.py  test_file_manager.py  test_financial_calculator.py  test_orchestrator.py  test_output_parser.py  test_retriever.py  test_vector_store.py
backend/utils/: job_tracker.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.css  page.tsx  providers.tsx
frontend/src/app/typst/: config.ts  constants.ts  page.tsx
frontend/src/app/typst/components/: ErrorDisplay.tsx  LoadingDisplay.tsx  PdfUploader.tsx  ResizableSplit.tsx  StatusBar.tsx  index.ts
frontend/src/components/: Brainflow.tsx  Tree5.tsx  TreeAnimation.tsx  Treedraw.tsx
frontend/src/components/ChatInterface/: AnalysisTable.tsx  ChatInterface.tsx  MetricsChart.tsx
frontend/src/components/FileUpload/: FileUpload.tsx
frontend/src/components/ui/: spinner.tsx
frontend/src/services/: api.ts
frontend/src/types/: chat.ts
ocr/: main.py  pyproject.toml
(+40 files in other folders)
