[project]
name = "ai-analyst"
version = "0.1.0"
description = "AI Business Analyst Assistant for financial data analysis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "openai>=1.50.0",
    "polars>=1.0.0",
    "python-calamine>=0.2.0",
    "fastexcel>=0.10.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.2.0",
    "qdrant-client>=1.9.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "zai-sdk>=0.2.2",
    "sqlalchemy>=2.0.46",
    "fastembed>=0.7.4",
    "flashrank>=0.2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "faker>=30.0.0",
]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "faker>=30.0.0",
    "pytest-mock>=3.15.1",
]

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
