[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "numpy<2",
    "opencv-contrib-python<4.11",
    "opencv-python<4.11",
    "paddleocr<3.0",
    "paddlepaddle<3.0",
    "pillow>=12.1.1",
    "torch<2.3",
    "torchaudio>=2.2.2",
    "torchvision>=0.17.2",
]
